fix(api): add unauthorized response to all paths
